--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,11 @@
 root = true
 
+[*.tsv]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_style = tab
+
 [*.txt]
 charset = utf-8
 end_of_line = lf
